--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/images/izettle.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Menú digital oficial de BubuBurger - Cocina con actitud" />
-    <title>BubuBurger - Menú Digital</title>
+    <meta name="description" content="BUBUBURGER - HAMBURGUESAS AL CARBÓN Menú digital " />
+    <title>BUBUBURGER - HAMBURGUESAS AL CARBÓN</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
