--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
 
+    <!-- Manifest para PWA -->
+    <link rel="manifest" href="/manifest.json">
+
     <!-- Favicon para navegadores -->
     <link rel="icon" href="/images/izettle.png" type="image/x-icon" />
 
+    <!-- Iconos para Android -->
+    <link rel="icon" sizes="192x192" href="/images/izettle.png">
+    <link rel="icon" sizes="512x512" href="/images/izettle.png">
+
     <!-- Icono para pantalla de inicio en iPhone -->
     <link rel="apple-touch-icon" href="/images/izettle.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Tema para Android -->
+    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#ffffff">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="BUBUBURGER - HAMBURGUESAS AL CARBÓN Menú digital" />
