--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <!-- Icono para pantalla de inicio en iPhone -->
     <link rel="apple-touch-icon" href="/images/izettle.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Tema para Android -->
